# Scharfschutze

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindChipmunk.cmake  FindEntityX.cmake
inc/: level.h  platformer.h
res/img/background/: render.xcf
res/screenshots/: render2.xcf
src/: level.cpp  main.cpp
